# STMBProject

./: .gitignore  CMakeLists.txt  README.md  command.h  eventrepository.h  icommand.h  interface.h  main  main.cpp  query.h  uuid.h
Dao/: daoaccount.h  eventrepository.h  idaoaccount.h  userdefs.h
Dto/: dtoaccount.h  dtoaccountevent.h  dtoaccountsummary.h
Event/: createaccountevent.h  depositeaccountevent.h  depositevent.h  event.h  listevent.h  persistaccountevent.h  removeaccountevent.h  summaryevent.h  undoaccountevent.h  undolastevent.h  withdrawaccountevent.h  withdrawevent.h
Handler/: accounthandler.h  createaccounthandler.h  depositeaccounthandler.h  depositeevent.h  depositehandler.h  dtoaccountevent.h  eventhandler.h  listhandler.h  persistaccounthandler.h  removeaccounthandler.h  summaryhandler.h  undoaccounthandler.h  undolasthandler.h  withdrawaccounthandler.h  withdrawhandler.h
Model/: account.h  client.h  iaccount.h
samples/: example_in_memory.cpp  example_prodution.cpp
tests/: Makefile  accountmock.h  accounttest  accounttest.cpp  commandmock.h  iaccount.h  integrationtest.cpp  mockaccount.h  querytest.cpp  repositorymock.h  repositorytest  repositorytest.cpp  repositorytest.h  unittest.cpp
uuid/: state.cpp  state.h  usertypes.h  uuid.cpp  uuid.h
